--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,13 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/library
 spring.datasource.username=postgres
 spring.datasource.password=root
 logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
+logging.level.root=WARN
+logging.file.name=logs/app.log
+logging.file.path=/logs
 
 #error html
 error.include-stacktrace=always
+
+#actuator
+management.endpoints.web.exposure.include=*
