--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,11 @@
             <version>2.13.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
