--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/library
-spring.datasource.username=postgres
-spring.datasource.password=root
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.show-sql=true
+#spring.datasource.url=jdbc:postgresql://localhost:5432/library
+#spring.datasource.username=postgres
+#spring.datasource.password=root
+
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=WARN
+
 logging.level.root=WARN
 logging.file.name=logs/app.log
 logging.file.path=/logs
@@ -15,3 +17,5 @@ error.include-stacktrace=always
 
 #actuator
 management.endpoints.web.exposure.include=*
+
+library.json.path=src/main/resources/library.json
